# cmake-project-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLog.cmake
src/: config.hpp.in  main.cpp  test-main.cpp
src/app/: app-test.cpp  app.cpp  app.hpp
